rhai/codegen/ui_tests/rhai_fn_bad_attr.stderr
error: unknown attribute 'unknown'
  --> $DIR/rhai_fn_bad_attr.rs:11:11
   |
11 | #[rhai_fn(unknown = "thing")]
   |           ^^^^^^^

error[E0433]: failed to resolve: use of undeclared crate or module `test_module`
  --> $DIR/rhai_fn_bad_attr.rs:22:8
   |
22 |     if test_module::test_fn(n) {
   |        ^^^^^^^^^^^ use of undeclared crate or module `test_module`
